--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico    " />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Ecommerce Product Category</title>
+        <title>Bella Fashion</title>
     </head>
     <body class="font-lato">
         <div id="root"></div>
